--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h1>hello</h1>
+	<h2>hi paige and colin</h2>
 	<div id="app">
 	</div>
 	<script src="/public/scripts/app.js"></script>
