--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Racing+Sans+One" rel="stylesheet">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 	<div id="app">
 	</div>
+
 	<script src="/public/scripts/app.js"></script>
 </body>
 </html>
